--- a/.abcde.conf
+++ b/.abcde.conf
@@ -37,7 +37,7 @@ CDPARANOIAOPTS="--never-skip=40"
 CDDISCID=cd-discid
 
 # Give the base location here for the encoded music files.
-OUTPUTDIR="/home/threv/Music"
+OUTPUTDIR="~"
 
 # The default actions that abcde will take.
 ACTIONS=cddb,read,encode,tag,move,clean
