--- a/.tfrc
+++ b/.tfrc
@@ -1,4 +1,3 @@
 /set isize=1
-/addworld sloth slothmud.org 6101
-/addworld sdf mud.sdf.org 4000
-/load spedwalk.tf
+/addworld -Tlp sloth slothmud.org 6101
+/addworld -Tlp sdf mud.sdf.org 4000
