--- a/.tfrc
+++ b/.tfrc
@@ -86,7 +86,6 @@
 /def -mregexp -t"^The large central well of Settlestone*" = fill %drink
 /def -mregexp -t"^A stone well stands in the middle of the*" = fill %drink
 /def -mregexp -t"^A bronze statue of dragon*" = fill %drink
-/def -mregexp -t"^You feel less protected" = cast 'armor'
 
 /def -mregexp -t"^You go to sleep." = /set sleeping 1
 /def -mregexp -t"^You wake, and sit up." = /set sleeping 0 %; stand
@@ -179,6 +178,19 @@
    /endif %; \
    /if ({reading} == 0) \
       drink %drink %; drink %drink %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
+/def -mregexp -t"^You feel less protected\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast armor %; \
    /endif %; \
    /if ({wassleeping} == 1) \
       /let wassleeping 0 %; \
