--- a/.tfrc
+++ b/.tfrc
@@ -255,3 +255,17 @@
       /let wassleeping 0 %; \
       sleep %; \
    /endif
+
+; sdf
+/def -mregexp -t"^Your skin feels soft again\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'metalic skin' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
