--- a/.tfrc
+++ b/.tfrc
@@ -256,6 +256,32 @@
       sleep %; \
    /endif
 
+/def -mregexp -t"^You have become exposed to evil\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'protection from evil' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
+/def -mregexp -t"^You suddenly feel less faithful\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'shield of faith' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
 ; sdf
 /def -mregexp -t"^Your skin feels soft again\." = \
    /if ({sleeping} == 1) \
