--- a/.tfrc
+++ b/.tfrc
@@ -217,7 +217,7 @@
       sleep %; \
    /endif
 
-/def -mregexp -t"^The 'fly' spell on you is about to wear off\." = \
+/def -mregexp -t"^The \'fly\' spell on you is about to wear off\." = \
    /if ({sleeping} == 1) \
       /let wassleeping 1 %; \
       wake %; stand %; \
@@ -229,6 +229,18 @@
       /let wassleeping 0 %; \
       sleep %; \
    /endif
+
+/def -mregexp -t"^Your fly spell just wore off*" = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'fly' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
 
 /def -mregexp -t"^The detect magic wears off\." = \
    /if ({sleeping} == 1) \
@@ -282,7 +294,47 @@
       sleep %; \
    /endif
 
+/def -mregexp -t"^It is pitch black*" = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'magic lantern' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
+/def -mregexp -t"^You sense the blue in your vision disappear\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'detect good' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
+/def -mregexp -t"^You sense the red in your vision disappear\." = \
+   /if ({sleeping} == 1) \
+      /let wassleeping 1 %; \
+      wake %; stand %; \
+   /endif %; \
+   /if ({reading} == 0) \
+      cast 'detect evil' %; \
+   /endif %; \
+   /if ({wassleeping} == 1) \
+      /let wassleeping 0 %; \
+      sleep %; \
+   /endif
+
 ; sdf
+
 /def -mregexp -t"^Your skin feels soft again\." = \
    /if ({sleeping} == 1) \
       /let wassleeping 1 %; \
