--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,8 +96,10 @@ set -g pane-active-border-bg green
 set -g message-fg white
 set -g message-bg black
 set -g message-attr dim
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour234,bold]⮀'
-#set -g status-right '#[fg=green][#[fg=white] #T #[fg=green]]'
+set -g status-left '#[fg=colour235,bg=colour252,bold] ⧉ #S #[fg=colour252,bg=colour234,bold]▶'
+# set -g status-right '#[fg=green][#[fg=white] #T #[fg=green]][ #[fg=red]#(/Users/threv/snippets/cpuload.sh) #[fg=yellow]#(/Users/threv/snippets/myMem.sh) #[fg=green]][ #[fg=cyan]%a %h %d, %Y #[fg=mag
+# set -g status-right '#[fg=green][ #[fg=red]#(/usr/local/bin/zelda-battery-tmux.sh) #[fg=cyan]%a %h %d, %Y #[fg=magenta]%r #[fg=green]]'
+set -g status-right '#[fg=green][ #[fg=cyan]%a %h %d, %Y #[fg=magenta]%r #[fg=green]]'
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=grey,bg=colour39,noreverse,bold] #I/#P ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
 
