--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,17 +52,18 @@ bind C-i select-layout main-vertical
 bind C-o select-layout tiled
 
 # Set mouse mode on
-set-window-option -g mode-mouse on
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set -g mode-mouse on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
-setw -g mouse-resize-pane on
+set -g mouse on
+#set-window-option -g mode-mouse on
+#set-option -g mouse-select-window on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-resize-pane on
+#set -g mode-mouse on
+#setw -g mouse-select-window on
+#setw -g mouse-select-pane on
+#setw -g mouse-resize-pane on
 
 # utf8 support
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 
 # Sane scrolling with the mouse
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -71,7 +72,8 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # NOTE:  GOT to have this set this way, and matching iTerm2 terminal name
 # in order for tmux's pane titles to work properly.
 # set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # quickly switch windows
 bind c-a select-pane -t :.+
@@ -101,7 +103,7 @@ set -g status-left '#[fg=colour235,bg=colour252,bold] ⧉ #S #[fg=colour252,bg=c
 # set -g status-right '#[fg=green][ #[fg=red]#(/usr/local/bin/zelda-battery-tmux.sh) #[fg=cyan]%a %h %d, %Y #[fg=magenta]%r #[fg=green]]'
 set -g status-right '#[fg=green][ #[fg=cyan]%a %h %d, %Y #[fg=magenta]%r #[fg=green]]'
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=grey,bg=colour39,noreverse,bold] #I/#P ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g window-status-current-format "#[fg=colour234,bg=colour39]▶#[fg=grey,bg=colour39,noreverse,bold] #I/#P ][ #W #[fg=colour39,bg=colour234,nobold]▶"
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
@@ -136,7 +138,7 @@ set-window-option -g clock-mode-style 12
 set -g status-interval 1
 
 # UTF-8
-setw -g utf8 on
+#setw -g utf8 on
 
 # Keep messages on screen a bit longer
 set -g display-time 600
